appId: com.gemwallet.ios
---
- launchApp
- tapOn: "Settings"
- tapOn: "Currency"
- tapOn: "🇺🇸 USD - US Dollar"
- assertVisible: "Settings"
